<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchParent"
    android:paddingHorizontal="?attr/primary_margin_horizontal"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <TextView
        style="@style/Text.H3"
        android:text="@string/dialog_rename_grocery_list_title"
        android:layout_marginTop="36dp" />
    
    <EditText
        android:id="@+id/new_name_edit"
        style="@style/EditText"
        android:layout_marginTop="?attr/primary_margin_horizontal">
        <requestFocus/>
    </EditText>
    
    <LinearLayout
        style="@style/MatchParentWrapContent"
        android:layout_marginTop="?attr/primary_margin_horizontal"
        android:layout_marginBottom="36dp">

        <Button
            android:id="@+id/back_btn"
            style="@style/Button.InActive"
            android:layout_weight="1"
            android:text="@string/dialog_rename_grocery_list_back_btn"
            android:layout_marginEnd="6dp"/>

        <Button
            android:id="@+id/save_btn"
            style="@style/Button.Active"
            android:layout_weight="1"
            android:text="@string/dialog_rename_grocery_list_save_btn"
            android:layout_marginStart="6dp"/>

    </LinearLayout>

</LinearLayout>