<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchParent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/header"
        style="@style/MatchParentWrapContent"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toTopOf="@+id/search_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_btn"
            style="@style/WrapContent"
            android:src="@drawable/ic_arrow"
            android:background="@null"/>

        <TextView
            android:id="@+id/title"
            style="@style/Text.H2.ScreenTitle"
            android:text="@string/screen_add_grocery_title" />

    </LinearLayout>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_bar"
        style="@style/EditText"
        android:layout_marginHorizontal="?attr/primary_margin_horizontal"
        android:layout_marginTop="26dp"
        android:queryHint="@string/screen_add_grocery_search"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:iconifiedByDefault="false"
        app:layout_constraintBottom_toTopOf="@id/grocery_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/grocery_recycler"
        style="@style/MatchParent0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_btn"
        style="@style/FloatingButton.Add"
        android:text="@string/screen_add_grocery_floating_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <include
        android:id="@+id/loading"
        layout="@layout/sublayout_loading"
        android:visibility="gone"
        android:text="@string/screen_grocery_list_floating_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar" />

    <include
        android:id="@+id/empty_layout"
        layout="@layout/empty_layout"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar" />


</androidx.constraintlayout.widget.ConstraintLayout>